--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>CIEL AVENUE</title>
+    <meta
+      name="description"
+      content="CIEL AVENUE est une plateforme de gestion immobilière digitale qui connecte acheteurs, vendeurs, promoteurs et experts."
+    />
+    <meta name="keywords" content="immobilier, gestion immobilière, plateforme digitale, acheteurs, vendeurs, promoteurs, experts" />
+    <meta name="author" content="CIEL AVENUE" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="google" content="notranslate" />
+    <meta name="google" content="notranslate" />
   </head>
   <body>
     <div id="root"></div>
